ch:fixed more bugs on mobile UI

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,13 +5,12 @@
 
 @media only screen and (max-width:600px) and (orientation:portrait){
     html {
-        transform: rotate(90deg);
+        transform: rotate(-90deg);
         transform-origin: left top;
+        height: 100vh;
         width: 100vw;
         overflow-x: hidden;
         position: absolute;
-        top: 100%;
-        left: 0;
     }
   }
   
